Fix Walker and notification styling after reboot
- Changed Walker to use omarchy-default theme directly
- Added layerrule for rounding (may not be supported, but doesn't cause errors)
- Removed broken custom-rounded theme approach
- Walker now properly inherits Omarchy styling with Tokyo Night colors

--- a/walker/.config/walker/themes/custom-rounded/style.css
+++ b/walker/.config/walker/themes/custom-rounded/style.css
@@ -1,6 +1,6 @@
 /* Custom walker theme with rounded corners */
 /* This overrides the Omarchy default theme */
-@import "../../../../../../../.local/share/omarchy/default/walker/themes/omarchy-default/style.css";
+@import "file:///home/sushii/.local/share/omarchy/default/walker/themes/omarchy-default/style.css";
 
 /* Add rounded corners to all main containers */
 .box-wrapper {
