--- a/walker/.config/walker/themes/omarchy-default/style.css
+++ b/walker/.config/walker/themes/omarchy-default/style.css
@@ -8,7 +8,11 @@
 }
 
 /* 3. Hide the keybind hints / tooltips at the bottom */
-.keybind-hints {
+.keybind-hints,
+#keybind-hints,
+[class*="keybind"],
+[class*="hint"],
+[class*="quick-activation"] {
   /* remove them completely */
   display: none !important;
   opacity: 0 !important;
@@ -16,4 +20,6 @@
   margin: 0 !important;
   min-height: 0 !important;
   min-width: 0 !important;
+  font-size: 0 !important;
+  height: 0 !important;
 }
